@@ -3,6 +3,9 @@ Dillo project
 =============================================================================
 
 dillo-2.2.1 [not released yet]
+
++- Implemented "View source" as a dpi.
+   Patch: Jorge Arellano Cid
 +- Configurable User-Agent HTTP header.
    Patch: Alexander Voigt, corvid
 +- Include Accept header in HTTP queries.
